[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Player/gunner_head_B.png" type="Texture" id=1]
[ext_resource path="res://Assets/Player/gunner_gun_B.png" type="Texture" id=2]
[ext_resource path="res://Assets/Player/legs.png" type="Texture" id=3]
[ext_resource path="res://Assets/Player/gunner_body_B.png" type="Texture" id=4]
[ext_resource path="res://GameContent/Player_Visuals.gd" type="Script" id=5]

[node name="Player_Visuals" type="Control"]
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite_Legs" type="Sprite" parent="."]
texture = ExtResource( 3 )
vframes = 4
hframes = 8
frame = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite_Gun" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 8
frame = 5
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite_Body" type="Sprite" parent="."]
texture = ExtResource( 4 )
hframes = 8
frame = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite_Head" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 8
frame = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Leg_Animation_Timer" type="Timer" parent="."]
wait_time = 0.271
autostart = true

[node name="Shoot_Animation_Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Top_Animation_Timer" type="Timer" parent="."]
wait_time = 0.35
autostart = true
